Perkin-UAT/force-app/main/default/objects/Custom_Case_Audit__c/Custom_Case_Audit__c.object-meta.xml
<CustomObject>
    <description>Captures field value change history</description>
    <label>Custom Case Audit</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Custom Case Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Case Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>