Perkin-UAT/force-app/main/default/objects/Custom_Case_Audit__c/fields/Calc_CR_Status__c.field-meta.xml
<CustomField>
    <fullName>Calc_CR_Status__c</fullName>
    <description>old formula:

IF(DX_CR_Status__c =&quot;&quot;,&quot;0-None&quot;,
IF(DX_CR_Status__c = &quot;Requirements Gathering&quot;,&quot;1-Requirements Gathering&quot;,
IF(DX_CR_Status__c = &quot;Pending Customer Approval&quot;,&quot;2-Pending Customer Approval&quot;,
IF(DX_CR_Status__c=&quot;Customer Approves Requirements&quot;,&quot;3-Customer Approves Requirements&quot;,
IF(DX_CR_Status__c = &quot;Ready to Assign to Engineer&quot;,&quot;4-Ready to Assign to Engineer&quot;,
IF(DX_CR_Status__c =&quot;In Progress with Engineer&quot;,&quot;5-In Progress with Engineer&quot;,
IF(DX_CR_Status__c=&quot;Pending Deployment (Turku DSS)&quot;,&quot;6-Pending Deployment (Turku DSS)&quot;,
IF(DX_CR_Status__c = &quot;Customer Validating&quot;,&quot;7-Customer Validating&quot;,
IF(DX_CR_Status__c = &quot;Go-Live (Akron DSS)&quot;,&quot;8-Go-Live (Akron DSS)&quot;,
&quot;9-Customer Acceptance Received&quot;)))))))))</description>
    <formula>IF(DX_CR_Status__c = &quot;None&quot;,&quot;0-None&quot;,
IF(DX_CR_Status__c = &quot;Requirements Gathering&quot;,&quot;1-Requirements Gathering&quot;,
IF(DX_CR_Status__c = &quot;Pending Customer Approval&quot;,&quot;2-Pending Customer Approval&quot;,
IF(DX_CR_Status__c=&quot;Customer Approves Requirements&quot;,&quot;3-Customer Approves Requirements&quot;,
IF(DX_CR_Status__c = &quot;Ready to Assign to Engineer&quot;,&quot;4-Ready to Assign to Engineer&quot;,
IF(DX_CR_Status__c =&quot;In Progress with Engineer&quot;,&quot;5-In Progress with Engineer&quot;,
IF(DX_CR_Status__c= &quot;Pending Deployment (Turku DSS)&quot;,&quot;6-Pending Deployment (Turku DSS)&quot;,
IF(DX_CR_Status__c = &quot;Customer Validating&quot;,&quot;7-Customer Validating&quot;,
IF(DX_CR_Status__c = &quot;Go-Live (Akron DSS)&quot;,&quot;8-Go-Live (Akron DSS)&quot;,
IF(DX_CR_Status__c = &quot;Customer Acceptance Received&quot;,
&quot;9-Customer Acceptance Received&quot;,&quot;&quot;))))))))))</formula>
    <label>Calc CR Status</label>
    <type>Text</type>
</CustomField>