Perkin-UAT/force-app/main/default/objects/Custom_Case_Audit__c/fields/CaseRef__c.field-meta.xml
<CustomField>
    <fullName>CaseRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Custom Case Audits</relationshipLabel>
    <relationshipName>Custom_Case_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>