Perkin-UAT/force-app/main/default/objects/Custom_Case_Audit__c/fields/DX_CR_Status__c.field-meta.xml
<CustomField>
    <fullName>DX_CR_Status__c</fullName>
    <label>CR Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>