Perkin-UAT/force-app/main/default/objects/Custom_Case_Audit__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Used for testing scalablity scenario.</description>
    <label>Priority</label>
    <length>100</length>
    <type>Text</type>
</CustomField>