Perkin-UAT/force-app/main/default/objects/Custom_Case_Audit__c/fields/TAT__c.field-meta.xml
<CustomField>
    <fullName>TAT__c</fullName>
    <formula>(5 * ( FLOOR( ( End_Date__c - DATETIMEVALUE( &#39;1900-01-08 00:00:00&#39; ) ) / 7 ) ) + MIN( 5, MOD( End_Date__c - DATETIMEVALUE( &#39;1900-01-08 00:00:00&#39; ), 7 ) ) ) 
- 
(5 * ( FLOOR( ( Start_Date__c- DATETIMEVALUE( &#39;1900-01-08 00:00:00&#39; ) ) / 7 ) ) + MIN( 5, MOD( Start_Date__c - DATETIMEVALUE( &#39;1900-01-08 00:00:00&#39; ), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>